# claude-code-demo

./: .gitignore  CLAUDE.md  README.md  explore_api.ipynb  pyproject.toml  todo.md
.githooks/: pre-commit  prepare-commit-msg
.github/workflows/: claude.yml  pr-description.yml
src/: main.py
tests/: test_main.py
