[project]
name = "claude-code-demo"
version = "0.1.0"
description = "claude-code-demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.4",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "pytest>=8.0.0",
    "responses>=0.25.7",
    "jupyter>=1.1.1",
]
